--- a/qtfuzzylite/ui/qtfuzzylite.qrc
+++ b/qtfuzzylite/ui/qtfuzzylite.qrc
@@ -1,12 +1,15 @@
 <RCC>
   <qresource>
+    <file alias="qt-logo.png">icons/qt-logo.png</file>
+    <file alias="help.png">icons/help-contents.png</file>
+    <file alias="reload.png">icons/view-refresh.png</file>
     <file alias="save-as.png">icons/document-save-as.png</file>
+    <file alias="open-recent.png">icons/document-open.png</file>
     <file alias="visualization.png">icons/visualization.png</file>
     <file alias="input.png">icons/input.png</file>
     <file alias="output.png">icons/output.png</file>
     <file alias="save.png">icons/document-save.png</file>
     <file alias="open.png">icons/document-open.png</file>
-    <file alias="term-view.png">icons/document-page-setup.png</file>
     <file alias="sort-terms.png">icons/view-sort-ascending.png</file>
     <file alias="create-rules.png">icons/insert-text.png</file>
     <file alias="terms.png">icons/document-page-setup.png</file>
