fl: fixes to ImEx. qt: New, Open, Save, Save as, and Reload. Open file from console arguments. Ask for help and Join the community.

--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -101,6 +101,9 @@
       </item>
       <item>
        <widget class="QDoubleSpinBox" name="sbx_x">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
