--- a/qtfuzzylite/ui/qtfuzzylite.qrc
+++ b/qtfuzzylite/ui/qtfuzzylite.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file alias="surface2d.png">icons/applications-graphics.png</file>
     <file alias="community.png">icons/internet-radio-new.png</file>
     <file alias="qt-logo.png">icons/qt-logo.png</file>
     <file alias="help.png">icons/help-contents.png</file>
